task-07/react-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  creationTimestamp: null
  name: react-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - xbaxromov.nvrbckdown.uz
    secretName: xbaxromov-domain-secret 
  rules:
  - host: xbaxromov.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: react-app
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
